Add support for backward and forward dependencies
